--- a/package.json
+++ b/package.json
@@ -1,24 +1,17 @@
 {
-  "name": "daoua-front-end-developer-test-task",
+  "name": "dao-test-task",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/daoua/front-end-developer-test-task.git"
+    "build-storybook": "build-storybook",
+    "lint": "tslint -c tslint.json 'src/**/*.{ts,tsx}'"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/daoua/front-end-developer-test-task/issues"
-  },
-  "homepage": "https://github.com/daoua/front-end-developer-test-task#readme",
   "dependencies": {
     "styled-components": "^5.1.1"
   },
@@ -28,6 +21,7 @@
     "@storybook/addon-links": "^5.3.19",
     "@storybook/addons": "^5.3.19",
     "@storybook/react": "^5.3.19",
+    "@types/styled-components": "^5.1.2",
     "babel-loader": "^8.1.0",
     "ts-loader": "^8.0.2",
     "tslint": "^6.1.3",
